# assistant_chatbot

./: .dockerignore  .env.docker  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.py  chta3.py  copy_tds.css  docker-compose.dev.yml  docker-compose.yml  ffff.py  finding_ob.py  first.py  gemini_api.py  gunicorn.conf.py  learned1.py  main.py  mapping.py  nginx.conf  question_executor.py  question_mapping.json  render.yaml  requirements.txt  run.sh  server.py  startup.txt  startuppy  tds2.py  tds_app.py  testing_tds.py  try.py  tttt.py  vicky.html  vicky_app.py  vicky_app_first.py  (+3 more)
.github/workflows/: deploy.yml
.vercel/: project.json
client-example/: javascript_client.js  python_client.py
config/: deploy-setup.sh  docker-entrypoint.sh  pyproject.toml  startup.sh
docs/: DOCKER.md
grok/: README.md  again.py  app.py  assignment_solver.py  bharat.py  ccchjfh.py  checking.html  checking.py  chta.py  chta2.py  data_q.py  gem.py  hug.py  iitm.html  json_q.py  king.py  learned.py  query_testing.py  question.py  question_api.py  question_mapping.json  questions.json  requirements.txt  second.py  setup_auth.py  step_analysis.md  tds.py  tempCodeRunnerFile.py  test_vicky_server.py  training_dataset.json  vicky.py  vicky_app.html  vicky_app.py  vicky_ds.py  vicky_main.py  vicky_server.py  vickyss.json
grok/ipad.py/: first.py
src/: __init__.py
static/: index.html  vickys.json
templates/: api_docs.html  files.html  index.html  result.html  vicky_api_docs.html
tests/: test_api.py  test_assignment_solver.py
(+25 files in other folders)
