[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vicky-chatbot"
version = "1.0.0"
description = "AI-powered chatbot with assignment solving capabilities"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.2",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.2",
    "pydantic>=2.5.0",
    "httpx>=0.25.2"
]

[tool.setuptools]
packages = ["vicky_server", "vicky_app"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/*", "static/*", "*.html", "*.css", "*.js"]
